smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-empty-namespace.smithy
// Syntax error at line 6, column 5: Expected IDENTIFIER but found POUND('#') | Model
$version: "2.0"

namespace smithy.example

use #
